--- a/AscendQueryEngine.csproj
+++ b/AscendQueryEngine.csproj
@@ -78,9 +78,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DateCriteria.xaml.cs">
+      <DependentUpon>DateCriteria.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DateCriteriaData.cs" />
     <Compile Include="QueryManager.xaml.cs">
       <DependentUpon>QueryManager.xaml</DependentUpon>
     </Compile>
+    <Page Include="DateCriteria.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="DbLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
